--- a/style.css
+++ b/style.css
@@ -14,13 +14,7 @@
 
 body {
   background-image: url(p1.jpg);
-/*
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-attachment: fixed;
-  background-position: center;
-  background-color: #360f0c;
-*/
+
 
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -39,7 +33,6 @@ body {
 .standart { 	
 	background-color: rgba(130, 90, 44, 0.7);
 	border-radius: 10px;
-/*	margin: 0 auto;*/
 	color: black;
 
 }
@@ -79,10 +72,6 @@ body {
 }
 
 p{
-/*
-  margin-left: 200px;
-  margin-right: 200px;
-*/
 	text-align: center;
   font-size: 20px;
   font-weight: bold;
@@ -125,12 +114,10 @@ p{
 .minimenu .img{
 	float: right;
 	background: url(ham.png);
-/*	background: blue;*/
 	height: 50px;
 	width: 50px;
 	background-size: cover;
 	background-repeat: no-repeat;
-/*	background-attachment: fixed;*/
 	
 }
 .minimenu:hover #ul2{
@@ -139,13 +126,7 @@ p{
 
 /*// menu*/
 #ul, #ul2 {
-/*	background: blue;
-	*/
-/*	border: 2px solid black;*/
-/*float: right;*/
   	list-style: none; 
-/*  margin: 0; */
-/*  padding-left: 0; */
 	padding: 0;
 	margin: 0;
   	background:#360f0c; 
@@ -158,7 +139,6 @@ p{
 }
 #ul2 ul{
 	list-style: none;
-/*	font-size: 13px;*/
 }
 #ul2 ul li a{
 	  line-height:20px; 
@@ -173,11 +153,9 @@ ul li a {
   text-decoration: none; 
   background:#570600; 
   color:#fff; 
-/*  padding:0px 15px; */
   font-family: arial; 
   line-height:50px; 
   display: block; 
-/*  border-right: 1px solid #677B27; */
   -moz-transition: all 0.3s 0.01s ease; 
   -o-transition: all 0.3s 0.01s ease;
   -webkit-transition: all 0.3s 0.01s ease;
@@ -203,23 +181,19 @@ ul li a:hover {
   background:#D43737;
 }
 li {
-/*	background: green;*/
 	text-align: center;
-/*  float:left; */
-/*  position:relative; */
+
 }
      
     
     li > ul {
-/*        position:absolute;*/
-/*        top:50px;*/
         display:none;   
     }
      
     
     li:hover > ul {
         display:block; 
-/*        width:250px;        */
+        
     }
    li:hover > ul > li {
         float:none; 
@@ -231,15 +205,12 @@ li {
     background-color: #360f0c;
 
   }
-/*збільшення тексту при наведенні*/
+/*increase text while hovering*/
   .grow:hover {
-/*  -webkit-transform: scale(0.8);*/
-/*  -ms-transform: scale(1.2);*/
-/*  transform: scale(1.2);*/
 	  font-size: 1.2em;
 	  
 }
-/*адаптивність*/
+/*adaptability*/
 @media screen and (max-width:700px){
 	.block{
 		font-size: 30px;
